# adlanTgBot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  messages.py
app/api/: app.py  lava_webhook.py  mock_payments.py
app/bot/: __init__.py  commands.py  dispatcher.py  event_logging.py  filters.py  handlers_admin.py  handlers_chat_member.py  handlers_group_service.py  handlers_user.py  keyboards.py
app/db/: connection.py  migrations.py  repositories.py
app/jobs/: access.py  payments.py  scheduler.py
app/legal/: __init__.py  documents.py
app/legal/docs/: TODO.md
app/legal/docs/community_rules/: community_rules_01.md  community_rules_02.md  community_rules_03.md
app/legal/docs/offer/: offer_01.md  offer_02.md  offer_03.md  offer_04.md  offer_05.md
app/legal/docs/privacy/: privacy_01.md  privacy_02.md  privacy_03.md  privacy_04.md
app/legal/docs/refunds/: refunds_01.md  refunds_02.md  refunds_03.md
app/resources/: __init__.py  messages.json
app/services/: access.py  admin_notify.py  group_access.py  invites.py  lava.py  payments.py
app/utils/: datetime.py  json.py
tests/: test_access.py  test_bot_commands.py  test_bot_filters.py  test_datetime_utils.py  test_group_access.py  test_group_entry_security.py  test_handlers_admin.py  test_keyboards.py  test_lava_client.py  test_legal_documents.py  test_messages.py  test_repositories_and_payments.py  test_user_messages.py
