[project]
name = "adlan-tg-bot"
version = "0.1.0"
description = "MVP Telegram access bot with aiogram, FastAPI, SQLite and Lava payments."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10,<4",
    "aiosqlite>=0.20,<1",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
